insert product,city

--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,7 +1,7 @@
 <input type="text" (keyup)="onKeyup(input1.value)" #input1 >
 
 
-<button (click)="onAdd()">add</button>
+<button><a routerLink="/add_city">Add City</a></button>
 <table>
     <thead>
         <th>City id</th>
