--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -6,12 +6,12 @@
     <thead>
         <th>Image id</th>
         <th>Path</th>
-        <th>Product id</th>     
+        <th>Product_name</th>     
       </thead>
   <tr *ngFor="let item of image">
     <td>{{item.Image_id}}</td>
     <td>{{item.Path}}</td>
-    <td>{{item.Product_id}}</td>
+    <td>{{item.Product_name}}</td>
     <td><button (click)="onDelete(item)" >delete</button></td>
     <td><button>update</button></td>
   </tr>
