--- a/src/app/sales-payment/sales-payment.component.html
+++ b/src/app/sales-payment/sales-payment.component.html
@@ -6,7 +6,7 @@
         <th>Sales Payment id</th>
         <th>Sales id</th>
         <th>Sales payment date</th>
-        <th>User id</th>
+        <th>User name</th>
         <th>Payment Type</th>
         <th></th>
       </thead>
@@ -14,7 +14,7 @@
     <td>{{item.Sales_payment_id}}</td>
     <td>{{item.Sales_id}}</td>
     <td>{{item.Sales_payment_date}}</td>
-    <td>{{item.User_id}}</td>
+    <td>{{item.User_name}}</td>
     <td>{{item.Payment_type}}</td>
     <td><button (click)="onDelete(item)" >delete</button></td>
     <td><button>update</button></td>
