--- a/src/app/purchase-order/purchase-order.component.html
+++ b/src/app/purchase-order/purchase-order.component.html
@@ -5,15 +5,15 @@
 <table>
     <thead>
         <th>Purchase order id</th>
-        <th>User id</th>
-        <th>Supplier id</th>
+        <th>User_name</th>
+        <th>Supplier_name</th>
         <th>Purchase order status</th>
         
       </thead>
   <tr *ngFor="let item of purchase_order">
     <td>{{item.Purchase_order_id}}</td>
-    <td>{{item.User_id}}</td>
-    <td>{{item.Supplier_id}}</td>
+    <td>{{item.User_name}}</td>
+    <td>{{item.Supplier_name}}</td>
     <td>{{item.Purchase_order_status}}</td>
     
     <td><button (click)="onDelete(item)" >delete</button></td>
