--- a/src/app/sales-order-detail/sales-order-detail.component.html
+++ b/src/app/sales-order-detail/sales-order-detail.component.html
@@ -4,13 +4,13 @@
 <table>
     <thead>
         <th>Sales_order_id</th>
-        <th>Product_id</th>
+        <th>Product_name</th>
         <th>Qty_dispatched</th>
         <th>Qty_ordered</th>       
       </thead>
   <tr *ngFor="let item of sales_order_detail">
     <td>{{item.Sales_order_id}}</td>
-    <td>{{item.Product_id}}</td>
+    <td>{{item.Product_name}}</td>
     <td>{{item.Qty_dispatched}}</td>
     <td>{{item.Qty_ordered}}</td>
     <td><button (click)="onDelete(item)" >delete</button></td>
