--- a/src/app/sales-order/sales-order.component.html
+++ b/src/app/sales-order/sales-order.component.html
@@ -7,7 +7,7 @@
         <th>User_id</th>
         <th>Customer_name</th>
         <th>Order_address</th>
-        <th>City_id</th>
+        <th>City_name</th>
         <th>Order_status</th>
         
       </thead>
@@ -16,7 +16,7 @@
     <td>{{item.User_id}}</td>
     <td>{{item.Customer_name}}</td>
     <td>{{item.Order_address}}</td>
-    <td>{{item.City_id}}</td>
+    <td>{{item.City_name}}</td>
     <td>{{item.Order_status}}</td>
     <td><button (click)="onDelete(item)" >delete</button></td>
     <td><button>update</button></td>
