--- a/src/app/sales-return-detail/sales-return-detail.component.html
+++ b/src/app/sales-return-detail/sales-return-detail.component.html
@@ -2,12 +2,12 @@
 <table>
     <thead>
         <th>Sales return id</th>
-        <th>Product id</th>
+        <th>Product name</th>
         <th>Qty</th>
       </thead>
   <tr *ngFor="let item of sales_return_detail">
     <td>{{item.Sales_return_id}}</td>
-    <td>{{item.Product_id}}</td>
+    <td>{{item.Product_name}}</td>
     <td>{{item.Qty}}</td>
     <td><button (click)="onDelete(item)" >delete</button></td>
     <td><button>update</button></td>
