all tables done

--- a/src/app/sidebarmenu.component.html
+++ b/src/app/sidebarmenu.component.html
@@ -33,7 +33,8 @@
                 <li><a routerLink="/sales_payment"><i class="icon-windows"></i>Sales Payment</a></li>          
                 <li><a routerLink="/sales_return"><i class="icon-windows"></i>Sales Return</a></li>          
                 <li><a routerLink="/sales_return_detail"><i class="icon-windows"></i>Sales Return Detail</a></li>          
-
+                <li><a routerLink="/login_page"><i class="icon-windows"></i>Login</a></li>          
+                
 
 
                   <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
