--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<<app-header></app-header>
 <div class="d-flex align-items-stretch">
 
   <app-sidebarmenu></app-sidebarmenu>
@@ -8,4 +8,4 @@
   </div>
   
 </div>
-
+<!-- <app-login-page></app-login-page> -->
