--- a/src/app/purchase-detail/update-purchase-detail.component.html
+++ b/src/app/purchase-detail/update-purchase-detail.component.html
@@ -3,7 +3,15 @@
     <div class="block">
       <div class="title"><strong>Update Purchase Detail</strong></div>
       <div class="block-body">
-        <form class="form-horizontal">
+            <div class="form-group row">
+            <label class="col-sm-3 form-control-label">Product id</label>
+            <div class="col-sm-9 select">
+              <select [(ngModel)]="product_id" name="product_id" id="product_id" class="form-control mb-3">
+                  <option *ngFor="let item of product" [value]="item.Product_id" [selected]="item.Product_id==product_id">{{item.Product_name}}</option>
+                </select>
+            </div>
+            </div>
+            <form class="form-horizontal">
             <div class="form-group">
                 <label class="form-control-label">Price per unit</label>
                 <input type="number" name="price_per_unit" id="price_per_unit" [(ngModel)]="price_per_unit" placeholder="Price per unit"
