--- a/src/app/sales-order-detail/update-sales-order-detail.component.html
+++ b/src/app/sales-order-detail/update-sales-order-detail.component.html
@@ -4,6 +4,14 @@
       <div class="title"><strong>Update Sales Order Detail</strong></div>
       <div class="block-body">
         <form class="form-horizontal">
+            <div class="form-group row">
+                <label class="col-sm-3 form-control-label">Product id</label>
+                <div class="col-sm-9 select">
+                  <select [(ngModel)]="product_id" name="product_id" id="product_id" class="form-control mb-3">
+                      <option *ngFor="let item of product" [value]="item.Product_id" [selected]="item.Product_id==product_id">{{item.Product_name}}</option>
+                    </select>
+                </div>
+                </div>
           <div class="form-group">
               <label class="form-control-label">Qty_Dispatched</label>
               <input type="number" name="qty_dispatched" id="qty_dispatched" [(ngModel)]="qty_dispatched" placeholder="Qty Dispatched" class="form-control">
