--- a/src/app/sales-return-detail/update-sales-return-detail.component.html
+++ b/src/app/sales-return-detail/update-sales-return-detail.component.html
@@ -4,6 +4,14 @@
       <div class="title"><strong>Update Sales Return Detail</strong></div>
       <div class="block-body">
         <form class="form-horizontal">
+            <div class="form-group row">
+                <label class="col-sm-3 form-control-label">Product id</label>
+                <div class="col-sm-9 select">
+                  <select [(ngModel)]="product_id" name="product_id" id="product_id" class="form-control mb-3">
+                      <option *ngFor="let item of product" [value]="item.Product_id" [selected]="item.Product_id==product_id">{{item.Product_name}}</option>
+                    </select>
+                </div>
+                </div>
         <div class="form-group">
             <label class="form-control-label">Qty</label>
             <input  type="number" name="qty" id="qty" [(ngModel)]="qty" placeholder="Qty" class="form-control">
